kubernetes/cache-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cache
  labels:
    app: lekt
    component: cache
spec:
  type: ExternalName
  externalName: lekt.jchu3p.0001.use2.cache.amazonaws.com
