kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lekt
  labels:
    app: lekt
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:886185890074:certificate/68c04a14-3f3b-485c-bf8b-8c1d2dbf1089
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=lektprojekt-logs,access_logs.s3.prefix=lekt-backend
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    kubernetes.io/ingress.class: alb
spec:
  rules:
    # production enviroment
    - host: www.lex.quest
      http:
        paths:
          # main app
          # fallback to frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-production
                port:
                  number: 80
    - host: api.lex.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-production
                port:
                  number: 8000

    # staging enviroment
    - host: www.dev.lex.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
    - host: api.dev.lex.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 8000
